welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:16: error: reassignment to val
      compteur = compteur + 1
               ^